--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ header h1, .card h2 {
 <canvas id="particles-bg"></canvas>
     <header>
         <div class="profile-header">
-            <img src="miran.jpg" alt="Zhiyar Ali" class="profile-img" loading="lazy">
+            <img src="miran.jpg" alt="Miran M.Haji" class="profile-img" loading="lazy">
             <div>
                 <h1 id="name-en">Miran Mohammed</h1>
                 <h1 id="name-ku" style="display:none;">میران محمد</h1>
@@ -568,35 +568,24 @@ header h1, .card h2 {
             <div class="projects-grid" id="projects-grid-en">
                 <div class="project-card">
                     <div class="project-tags">
-                        <span>App</span><span>Teamwork</span>
+                        <span>Website</span> <span>Restaurant</span>
                     </div>
-                    <h3><i class="fas fa-ticket-alt"></i> Extra Time Application</h3>
-                    <p>A ticket reservation app made with university mates. Extra Time saves your time anywhere, anytime.</p>
+                    <h3><i class="fas fa-utensils"></i>Sazan Restaurant Web</h3>
+                    <p>Sazan Restaurant is a modern dining destination offering carefully crafted dishes made from fresh, high-quality ingredients. The website highlights the restaurant's menu, ambiance, and services, allowing guests to explore offerings.</p>
                     <div class="project-links">
                         <a href="#" title="View on GitHub"><i class="fab fa-github"></i></a>
-                        <a href="#" title="Live Demo"><i class="fas fa-external-link-alt"></i></a>
+                        <a href="https://sazan.software/" title="Live Demo" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
                 <div class="project-card">
                     <div class="project-tags">
-                        <span>Blog</span><span>Fullstack</span>
+                        <span>App</span><span>Figma</span>
                     </div>
-                    <h3><i class="fas fa-blog"></i> Personal Blog Platform</h3>
-                    <p>A responsive blog for writing, editing, and sharing articles. Features markdown, comments, and categories.</p>
+                    <h3><i class="fas fa-plane"></i>Flight Booking</h3>
+                       <p>A responsive flight booking platform for searching, comparing, and reserving flights. Features real-time availability, secure payments, and booking management.</p>
                     <div class="project-links">
-                        <a href="#" title="View on GitHub"><i class="fab fa-github"></i></a>
-                        <a href="#" title="Live Demo"><i class="fas fa-external-link-alt"></i></a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-tags">
-                        <span>Quiz</span><span>Frontend</span>
-                    </div>
-                    <h3><i class="fas fa-question-circle"></i> Online Quiz Platform</h3>
-                    <p>Create and take quizzes, track scores, and challenge friends.</p>
-                    <div class="project-links">
-                      <a href="#" title="View on GitHub"><i class="fab fa-github"></i></a>
-                        <a href="#" title="Live Demo"><i class="fas fa-external-link-alt"></i></a>
+                        <a href="#" title="Viplaneew on GitHub"><i class="fab fa-github"></i></a>
+                        <a href="https://www.figma.com/proto/z1929Iw4RhHVbP4xI4cJ8V?node-id=0:1" title="Live Demo" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -614,35 +603,25 @@ header h1, .card h2 {
             <div class="projects-grid" id="projects-grid-ku" style="display:none;">
                 <div class="project-card">
                     <div class="project-tags">
-                        <span>ئەپ</span><span>تیم</span>
+                        <span>وێبسایت</span><span>چێشتخانە</span>
                     </div>
-                    <h3><i class="fas fa-ticket-alt"></i> بەرنامەی ئێکستراتایم</h3>
-                    <p>بەرنامەیەک بۆ رزگرتنی بلیت کە لەگەڵ هاوکارانی زانکۆ دروستکراوە. ئێکستراتایم کاتت پارێز دەکات هەر کوێ و هەر کات.</p>
+                    <h3><i class="fas fa-utensils"></i> ماڵپەڕی چێشتخانەی سازان</h3>
+                    <p>ماڵپەڕێکی نوێ بۆ چێشتخانەی سازان کە خواردنەکان بە شێوەیەکی خۆشەویست و بەکارهێنەرخواز پیشان دەدات. ماڵپەڕەکە تایبەتمەندیەکان و خزمەتگوزاریەکانی چێشتخانەکە نیشان دەدات.</p>
                     <div class="project-links">
                         <a href="#" title="بینینی لە گیت هەب"><i class="fab fa-github"></i></a>
-                        <a href="#" title="بینینی ڕاستەوخۆ"><i class="fas fa-external-link-alt"></i></a>
+                        <a href="https://sazan.software/" title="بینینی ڕاستەوخۆ" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
                 <div class="project-card">
                     <div class="project-tags">
-                        <span>بلۆگ</span><span>فولستاک</span>
+                        <span>ئەپ</span><span>فێگما</span>
                     </div>
-                    <h3><i class="fas fa-blog"></i> پلاتفۆرمی بلۆگ</h3>
-                    <p>بلۆگێکی وەڵامگەڕ بۆ نووسین، دەستکاری و هاوبەشکردنی بابەتەکان. تایبەتمەندیەکان: مارکداون، لێدوان و هاوپۆلەکان.</p>
+                    <h3><i class="fas fa-plane"></i> پلاتفۆرمی فڕۆکەیەک</h3>
+                    <p>پلاتفۆرمی فڕۆکەیەکی وەڵامگەڕ بۆ گەڕان، پێوانەکردن و تۆمارکردنی فڕۆکەکان. تایبەتمەندیەکان: بەردەوامی کات، پارەدانەکانی سەلامەتی، و بەڕێوەبردنی تۆمارکردن.</p>
                     <div class="project-links">
                         <a href="#" title="بینینی لە گیت هەب"><i class="fab fa-github"></i></a>
-                        <a href="#" title="بینینی ڕاستەوخۆ"><i class="fas fa-external-link-alt"></i></a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-tags">
-                        <span>کویز</span><span>پێشەکی</span>
-                    </div>
-                    <h3><i class="fas fa-question-circle"></i> پلاتفۆرمی کویز</h3>
-                    <p>دروستکردن و تاقیکردنەوەی کویز، تۆمارکردنی خاڵ و هەڵوەشاندنەوەی هاوڕێیان.</p>
-                    <div class="project-links">
-                        <a href="#" title="بینینی لە گیت هەب"><i class="fab fa-github"></i></a>
-                        <a href="#" title="بینینی ڕاستەوخۆ"><i class="fas fa-external-link-alt"></i></a>
+                        <a href="https://www.figma.com/proto/z1929Iw4RhHVbP4xI4cJ8V?node-id=0:1" title="بینینی ڕاستەوخۆ" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+        
                     </div>
                 </div>
                 <div class="project-card">
@@ -667,7 +646,7 @@ header h1, .card h2 {
             </h2>
             <p id="contact-en">Feel free to reach out for collaborations or just a friendly hello!</p>
             <p id="contact-ku" style="display:none;">بە ئاسانی پەیوەندی بکە بۆ هاوبەشکاری یان تەنها بۆ سڵاوێکی هاوڕێیانە!</p>
-            <form>
+            <form action="https://t.me/Miran_1212" method="get" target="_blank">
                 <div class="form-group">
                     <input type="text" name="name" required placeholder=" " id="input-name">
                     <label id="label-name-en">Your Name</label>
